Added Colums for cases tab. Removed unused stats.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "name": "bento-frontend",
+  "name": "gmb-bento-frontend",
   "version": "0.1.0",
   "dependencies": {
     "@apollo/client": "^3.3.4",
