--- a/src/content/dev/aboutPagesContent.yaml
+++ b/src/content/dev/aboutPagesContent.yaml
@@ -14,4 +14,4 @@
     - paragraph: "•	Frontend: $$[https://github.com/CBIIT/bento-frontend](https://github.com/CBIIT/bento-frontend)"
     - paragraph: "•	File and Data Loaders: $$[https://github.com/CBIIT/icdc-dataloader](https://github.com/CBIIT/icdc-dataloader)"
   secondaryZoomImageTitle: "The Bento Core Data Model"
-  secondaryZoomImage: 'https://cbiit.github.io/bento-model/model-desc/bento-model.svg'
+  secondaryZoomImage: 'https://raw.githubusercontent.com/CBIIT/gmb-model/main/model-desc/gmb_model.svg'
