--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^7.0.1",
-    "bento-components": "^0.1.86",
+    "bento-components": "^0.1.107",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
@@ -51,6 +51,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.8.2",
     "react-apollo": "^3.1.5",
@@ -58,6 +59,7 @@
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.2",
     "react-loading-skeleton": "^2.1.1",
+    "react-measure": "^2.5.2",
     "react-redux": "^7.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -65,14 +67,17 @@
     "react-swipeable-views": "^0.13.9",
     "react-syntax-highlighter": "^10.2.0",
     "react-toastify": "^4.5.2",
+    "react-use-googlelogin": "^0.12.5",
     "react-uuid": "^1.0.2",
     "react-vis": "^1.11.7",
     "react-zoom-pan-pinch": "^1.4.5",
     "recharts": "^1.7.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.5",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
