--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@jbrowse/react-linear-genome-view": "^1.3.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "*",
     "@svgr/webpack": "4.1.0",
     "axios": "^0.21.1",
     "babel-core": "7.0.0-bridge.0",
@@ -65,6 +66,7 @@
     "react-swipeable-views": "^0.13.9",
     "react-syntax-highlighter": "^10.2.0",
     "react-toastify": "^4.5.2",
+    "react-use-googlelogin": "^0.12.5",
     "react-uuid": "^1.0.2",
     "react-vis": "^1.11.7",
     "react-zoom-pan-pinch": "^1.4.5",
