--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
     "css-loader": "1.0.0",
-    "dotenv": "^6.0.0",
-    "dotenv-expand": "4.2.0",
+    "dotenv": "^16.0.0",
+    "dotenv-expand": "^8.0.3",
     "eslint-config-react-app": "^3.0.7",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
